Corrected folder naming for email provider

--- a/Factors.Feature.Email.Smtp/Factors.Feature.Email.Smtp.csproj
+++ b/Factors.Feature.Email.Smtp/Factors.Feature.Email.Smtp.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Factors.Feature.EmailFactor\Factors.Feature.Email.csproj" />
+    <ProjectReference Include="..\Factors.Feature.Email\Factors.Feature.Email.csproj" />
   </ItemGroup>
 
 </Project>
