Updated structure so all feature management happens through the main interface instead of a bunch of random static classes

--- a/Factors.Database.InMemory/Factors.Database.InMemory.csproj
+++ b/Factors.Database.InMemory/Factors.Database.InMemory.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Factors.Interfaces\Factors.Interfaces.csproj" />
+    <ProjectReference Include="..\Factors.Models\Factors.Models.csproj" />
   </ItemGroup>
 
 </Project>
