--- a/Factors.Database.SqlServer/Factors.Database.SqlServer.csproj
+++ b/Factors.Database.SqlServer/Factors.Database.SqlServer.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Factors.Models\Factors.Models.csproj" />
     <ProjectReference Include="..\Factors\Factors.csproj" />
   </ItemGroup>
 
