--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ mono: none
 dotnet: 2.0.0
 solution: Factors.sln
 script:
-  - cd Factors
   - dotnet restore
   - dotnet build -c Release
-  - dotnet test Factors.Tests/Factors.Tests.csproj
+  - dotnet test Factors.Tests
