--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ solution: Factors.sln
 script:
   - dotnet restore
   - dotnet build -c Release
-  - dotnet test Factors.Tests
+  - dotnet test Factors.Tests -c Release
