Added support for Postmark as an email provider (with template support as well); Cleaned up some file naming to make it more descriptive

--- a/Factors.Feature.Email.Postmark/Factors.Feature.Email.Postmark.csproj
+++ b/Factors.Feature.Email.Postmark/Factors.Feature.Email.Postmark.csproj
@@ -6,7 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Factors.Models\Factors.Models.csproj" />
+    <PackageReference Include="Postmark" Version="3.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Factors.Feature.Email\Factors.Feature.Email.csproj" />
   </ItemGroup>
 
 </Project>
