--- a/Factors.Tests/Factors.Tests.csproj
+++ b/Factors.Tests/Factors.Tests.csproj
@@ -32,6 +32,8 @@
     <ProjectReference Include="..\Factors.Feature.Email.Smtp\Factors.Feature.Email.Smtp.csproj" />
     <ProjectReference Include="..\Factors.Feature.Email\Factors.Feature.Email.csproj" />
     <ProjectReference Include="..\Factors.Models\Factors.Models.csproj" />
+    <ProjectReference Include="..\Factors.Token.Alphabet\Factors.Token.Alphabet.csproj" />
+    <ProjectReference Include="..\Factors.Token.Alphanumeric\Factors.Token.Alphanumeric.csproj" />
     <ProjectReference Include="..\Factors.Token.Number\Factors.Token.Number.csproj" />
     <ProjectReference Include="..\Factors\Factors.csproj" />
   </ItemGroup>
